# sciknot

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINAL_AUDIT.md  Makefile  README.md  README_JURY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  sitecustomize.py
config/: models.yml
data/: raw_manifest.csv
data/curated/: demo_case.md  documents_seed.csv  experiments_seed.csv  laboratories.csv  materials.csv  properties.csv  regimes.csv
data/eval/: gold_claims.csv  (+2 more)
demo/: DEMO_SCRIPT.md  JURY_QA.md  RECORDING_GUIDE.md  SUBMISSION_CHECKLIST.md
docs/: RUN_RU.md  architecture.md  data_dictionary.md  demo_acceptance.md  evaluation.md  model_selection.md
scripts/: benchmark_yandex_models.py  build_graph.py  evaluate_demo.py  evaluate_extraction.py  export_graph_snapshot.py  extract_claims.py  extract_evidence.py  final_checklist.py  inventory_sources.py  prepare_demo_data.py  probe_yandex_models.py  run_contradiction_analysis.py  run_demo_query.py  run_gap_analysis.py  scan_secrets.py  seed_demo.py  smoke_demo.py  smoke_http.py  smoke_launch_paths.py  smoke_streamlit.py  start_demo.ps1  start_demo.sh  validate_seed_data.py
tests/: test_answer_builder.py  test_app_flows.py  test_app_import.py  test_claim_validation.py  test_contradictions.py  test_demo_questions.py  test_evidence.py  test_gap_analysis.py  test_graph_queries.py  test_ingest_tables.py  test_linking.py  test_literature_review.py  test_llm_summary.py  test_model_config.py  test_models.py  test_query_parser.py  test_seed_data.py
tools/: live_llm_smoke.py
(+19 files in other folders)
